style: fix inverted spacing around Academic Service subheadings
The gap before a subheading (separating it from the prior group) was
smaller than the gap after it (before its own list), which is
backwards from how proximity should read. Swap it: more space above
each subheading, tighter space to its own list below.

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -112,9 +112,16 @@
     text-align: right;
   }
 
+  .compact-list p:has(> strong:only-child) {
+    margin: 1.75em 0 0.4em;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
   .compact-list strong {
     display: inline-block;
-    margin-top: 0.5em;
     padding-bottom: 0.2em;
     border-bottom: 1px solid $border-color;
   }
